# videofilemanager

./: .gitignore  build.sh  plex.py  pyoxidizer.bzl
common/: Cargo.toml
common/src/: imdbid.rs  imdbid_old.rs  lib.rs  main.rs
file_server/: Cargo.toml
file_server/junk/: cache.rs  core.rs
file_server/src/: cache.rs  core.rs  database.rs  error.rs  file_map.rs  lib.rs  main.rs  media_mixer.rs  microservice.rs  microservice_responders.rs
file_server/src/core/: core.rs  database.rs  error.rs  file_map.rs  media_mixer.rs  mod.rs
file_server/src/microservice/: microservice.rs  mod.rs  responder.rs
imdb_datasets/: Cargo.toml
imdb_datasets/src/: generic.rs  imdb_dataset.rs  imdb_dataset_old.rs  lib.rs  main.rs  model.rs
iptorrents/: Cargo.toml
iptorrents/resources/test/: torrenttable.html
iptorrents/src/: core.rs  error.rs  lib.rs  main.rs  request.rs  response.rs
iptorrentsv2/: Cargo.toml
junk/: read.py
junk/common/src/: imdbid.rs  main.rs
junk/py_lib/: constants.py  fswatcher.py  load_config.py  ost.py  plex.py
junk/py_lib/test/lib/: imdb_datasets_mock.py  omdb_mock.py
junk/py_lib/test/resources/: omdb.tt00519784.json  omdb.tt05273028.json
junk/schema/: Subtitles_DOWN.sql
junk/web_requests/imdb_dataset/: Cargo.toml
junk/web_requests/imdb_dataset/resources/: .gitignore
junk/web_requests/imdb_dataset/src/: client.rs  model.rs
metadata_api/: server.proto
metadata_api/db_writer/: Cargo.toml
metadata_api/db_writer/src/: lib.rs  writer.rs
metadata_api/get_imdb_datasets/: Cargo.toml
metadata_api/get_imdb_datasets/src/: core.rs  deser.rs  error.rs  lib.rs  main.rs  model.rs  model_aa.rs  model_deser.rs  stream.rs
metadata_api/imdb_datasets/: Cargo.toml
metadata_api/imdb_datasets/junk/: error.rs
metadata_api/imdb_datasets/src/: error.rs  kind.rs  lib.rs  main.rs  model.rs  old_lib.rs  request.rs  stream.rs  streams.rs  test_mock_server.rs  write.rs  writer.rs
metadata_api/imdb_datasets_v2/: Cargo.toml
metadata_api/imdb_datasets_v2/src/: lib.rs  main.rs  model.rs  test_mock_server.rs
metadata_api/omdb/: Cargo.toml
metadata_api/omdb/src/: error.rs  lib.rs
metadata_api/resources/test/: script.py
metadata_api/service/: Cargo.toml
metadata_api/tracker/: .env  Cargo.toml
metadata_api/tracker/resources/: imdb_datasets.py  imdb_datasets.sql  imdb_datasets_DOWN.py  imdb_datasets_DOWN.sql  imdb_datasets_UP.py  imdb_datasets_UP.sql  imdb_datasets_temp_DOWN.sql  imdb_datasets_temp_REPLACE.sql  imdb_datasets_temp_UP.sql  pgsql_DOWN.sql  pgsql_UP.sql  sqlx_init.py
metadata_api/tracker/resources/test/: .gitignore  imdb_datasets.db  script.py
metadata_api/tracker/src/: lib.rs  request.rs
metadata_api/tracker/src/client/: client.rs  imdb_datasets.rs  mod.rs
metadata_api/tracker/src/pipe/: mod.rs  pipe.rs
metadata_api/tracker/src/pipe/guessit/: data.rs  mod.rs  pipe.rs
metadata_api/tracker/src/pipe/imdb_datasets/: chunk.rs  data.rs  db_pipe.rs  mod.rs  rows.rs  rowss.rs  source.rs
metadata_api/tracker/src/pipe/imdb_datasets/junk/: rows.rs
metadata_api/tracker/src/pipes/guessit/: pipe.rs
metadata_api/tracker/src/pipes/imdb_datasets/: chunk_pipe.rs  chunk_row_pipe.rs  db_pipe.rs  mod.rs
metadata_api/tracker/src/token/: imdbid.rs  mod.rs
metadata_api/tracker/src/tokens/: mod.rs
metadata_api/untitled/: Cargo.toml
metadata_api/untitled/src/: error.rs  lib.rs  omdb.rs  ost.rs
metadata_api/writer/: Cargo.toml
metadata_api/writer/src/: lib.rs  writer.rs
py_bin/: fswatcher.py  load_config.py  test.py
py_daemon/: daemon.py  httpserver.py  test.py
py_lib/: constants.py  daemon.py  fswatcher.py  funcs.py  httpserver.py  imdb_datasets.py  imdbid.py  imdbid_db.py  import.py  omdb.py  ost.py  plex.py  subtitle.py  test.py  util.py
py_lib/test/: test.py  test_imdb_datasets.py  test_omdb.py
py_lib/test/resources/: .gitignore  omdb.tt07049682.json
python/: download_imdb_tsv.py  imdb_datasets.py  omdb.py  plex.py  util.py
python/schema/: Omdb_DOWN.sql  Omdb_UP.sql  Ost_DOWN.sql  Ost_UP.sql  TitleEpisode_UP.sql
python/test/: test_imdb_datasets.py  test_util.py
rs_daemon/: Cargo.toml  pyoxidizer.bzl
rs_lib/: Cargo.toml
rs_lib/src/: lib.rs  main.rs
schema/: Omdb_UP.sql  Ost_UP.sql  Subtitles_UP.sql  TitleEpisode_DOWN.sql  TitleEpisode_UP.sql
test/: test_imdb_datasets_mock.py
web_requests/imdb_dataset/: Cargo.toml
web_requests/imdb_dataset/resources/test/: comprehend_data.py  data.py  httptest.py  test.py  yest.py
web_requests/imdb_dataset/src/: alib.rs  core.rs  deser.rs  error.rs  lib.rs  main.rs  model.rs
