[package]
name = "file_server"
version = "0.1.0"
authors = ["WiggidyW <rlr0017@auburn.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "^0.4", default-features = false, features = ["tls"] }
rocket_contrib = { version = "^0.4", default-features = false, features = ["json"] }
lazy_static = { version = "^1.4" }
rusqlite = { version = "^0.23" }
serde = { version = "^1.0", default-features = false, features = ["derive"] }
serde_json = { version = "^1.0" }
derive_more = { version = "^0.99" }
chashmap = { version = "^2.2" }