[package]
name = "imdb_datasets"
version = "0.1.0"
authors = ["WiggidyW <rlr0017@auburn.edu>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
reqwest = { version = "^0.10", default-features = false, features = ["blocking", "rustls"] }
chrono = { version = "^0.4", features = ["serde"] }
serde = { version = "^1.0", features = ["derive"] }
flate2 = { version = "^1.0" }
bincode = { version = "1.2" }
bytes = { version = "^0.5" }
csv = { version = "^1.1" }

[profile.dev]
opt-level = 0