[package]
name = "iptorrents"
version = "0.1.0"
authors = ["WiggidyW"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "^1.1", default-features = false, features = ["tls"] }
scraper = { version = "^0.12" }
lazy_static = { version = "^1" }
serde = { version = "^1.0", default-features = false, features = ["derive"] }
bincode = { version = "^1.2" }