[package]
name = "db_writer"
version = "0.1.0"
authors = ["WiggidyW <rlr0017@auburn.edu>"]
edition = "2018"

[features]
async-std-runtime = ["mongodb/async-std-runtime"]
tokio-runtime = ["mongodb/tokio-runtime"]

[dependencies]
derive_more = { version = "^0.99" }
async-trait = { version = "^0.1" }
mongodb = { version = "^1.0" }
serde = { version = "^1.0" }
smol = { version = "^0.1" }