[package]
name = "imdb_datasets"
version = "0.1.0"
authors = ["WiggidyW <rlr0017@auburn.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { path = "../../../reqwest", features = ["rustls-tls", "stream"], default-features = false }
async-compression = { version = "^0.3", features = ["gzip", "stream"], default-features = false }
derive_more = { version = "^0.99" }
futures = { version = "^0.3" }
tokio = { version = "^0.2", features = ["stream", "rt-threaded", "sync"] }
bytes = { version = "^0.5" }
serde = { version = "^1.0", features = ["derive"] }
async-trait = { version = "^0.1" }