[package]
name = "imdb_datasets"
version = "0.1.0"
authors = ["WiggidyW <rlr0017@auburn.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
csv = { version = "^1.1" }
reqwest = { version = "^0.10", features = ["blocking", "rustls-tls"], default-features = false }
flate2 = { version = "^1.0" }
crossbeam = { version = "^0.7" }
either = { version = "^1.5" }

[dev-dependencies]
warp = { version = "^0.2" }
tokio = { version = "^0.2", features = ["macros"] }