[package]
name = "tracker"
version = "0.1.0"
authors = ["Wiggidy <ronaldriggles@riseup.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0"
serde_json = "^1.0"
async-trait = "^0.1"
futures = "^0.3"
derive_more = "^0.99"
derive-new = "^0.5"
lazy_static = "^1.4"
reqwest = { path = "../../../reqwest", default-features = false, features = ["rustls-tls", "stream"] }
sqlx = { version = "^0.3", features = ["macros", "postgres"] }
bytes = "^0.5"
tokio = { version = "^0.2", features = ["rt-threaded", "sync", "fs", "macros"] }
async-compression = { version = "^0.3", features = ["gzip", "stream"], default-features = false }
tokio-util = { version = "^0.3", features = ["codec"] }
pyo3 = "^0.10"

[profile.test]
opt-level = 2