[package]
name = "untitled"
version = "0.1.0"
authors = ["WiggidyW <rlr0017@auburn.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { path = "../../../reqwest", features = ["rustls-tls"], default-features = false }
derive_more = { version = "^0.99" }
async-trait = { version = "^0.1" }
serde_json = { version = "^1.0" }
serde = { version = "^1.0", features = ["derive"] }
bytes = { version = "^0.5" }
http = { version = "^0.2" }