[package]
name = "writer"
version = "0.1.0"
authors = ["WiggidyW <rlr0017@auburn.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0" }
async-trait = { version = "^0.1" }
mongodb = { version = "^1.0" }
derive_more = { version = "^0.99" }
smol = { version = "^0.1" }