[package]
name = "imdb_dataset"
version = "0.1.0"
authors = ["WiggidyW <rlr0017@auburn.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compression = { version = "^0.3", default-features = false, features = ["stream", "gzip"] }
reqwest = { version = "^0.10", default-features = false, features = ["rustls-tls", "stream"] }
tokio = { version = "^0.2", features = ["full"] }
futures-core = { version = "^0.3" }
futures-util = { version = "^0.3" }
bytes = { version = "^0.5" }

[dev-dependencies]